# interpenetration

./: .gitignore  data_generation.py  data_proccessing.py  h_compare.py  main.py  plots_2.py  plotting.py  plotting_compare.py  pyproject.toml
data/: N1_100_N2_100_sig1_0.01_sig2_0.19.msgpack  N1_100_N2_100_sig1_0.01_sig2_0.19.txt  N1_100_N2_100_sig1_0.03_sig2_0.17.msgpack  N1_100_N2_100_sig1_0.03_sig2_0.17.txt  N1_100_N2_100_sig1_0.05_sig2_0.15.msgpack  N1_100_N2_100_sig1_0.05_sig2_0.15.txt  N1_100_N2_100_sig1_0.07_sig2_0.13.msgpack  N1_100_N2_100_sig1_0.07_sig2_0.13.txt  N1_100_N2_100_sig1_0.1_sig2_0.1.msgpack  N1_100_N2_100_sig1_0.1_sig2_0.1.txt  N1_100_N2_900_sig1_0.01_sig2_0.01.msgpack  N1_200_N2_200_sig1_0.01_sig2_0.19.msgpack  N1_200_N2_200_sig1_0.01_sig2_0.19.txt  N1_200_N2_200_sig1_0.03_sig2_0.17.msgpack  N1_200_N2_200_sig1_0.03_sig2_0.17.txt  N1_200_N2_200_sig1_0.05_sig2_0.15.msgpack  N1_200_N2_200_sig1_0.05_sig2_0.15.txt  N1_200_N2_200_sig1_0.07_sig2_0.13.msgpack  N1_200_N2_200_sig1_0.07_sig2_0.13.txt  N1_200_N2_200_sig1_0.09_sig2_0.11.msgpack  N1_200_N2_200_sig1_0.09_sig2_0.11.txt  N1_200_N2_200_sig1_0.1_sig2_0.1.msgpack  N1_200_N2_200_sig1_0.1_sig2_0.1.txt  N1_200_N2_800_sig1_0.01_sig2_0.01.msgpack  N1_200_N2_800_sig1_0.01_sig2_0.01.txt  N1_20_N2_180_sig1_0.1_sig2_0.1.msgpack  N1_20_N2_180_sig1_0.1_sig2_0.1.txt  N1_300_N2_700_sig1_0.01_sig2_0.01.msgpack  N1_300_N2_700_sig1_0.01_sig2_0.01.txt  N1_400_N2_600_sig1_0.01_sig2_0.01.msgpack  N1_400_N2_600_sig1_0.01_sig2_0.01.txt  N1_40_N2_160_sig1_0.1_sig2_0.1.msgpack  N1_40_N2_160_sig1_0.1_sig2_0.1.txt  (+16 more)
(+7 files in other folders)
