[tool.poetry]
name = "interpenetration"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan.imc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sfbox-api = {git = "https://github.com/IvanMikhailovIMCRAS/sfbox_api.git"}
matplotlib = "^3.10.0"
msgpack = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
